<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:osmonitor="http://schemas.android.com/apk/res-auto" >
     <group android:id="@+id/ui_message_menu_group">
         <item
             android:id="@+id/ui_message_type"
             android:title="@string/ui_menu_type"
             osmonitor:actionLayout="@layout/ui_message_options" 
             osmonitor:showAsAction="ifRoom"/>
         
         <item
             android:id="@+id/ui_message_search"
             android:title="@string/ui_menu_search"
             android:icon="@drawable/ic_action_search"
             osmonitor:actionLayout="@layout/ui_message_action" 
             osmonitor:showAsAction="ifRoom|collapseActionView"/>
      </group>

      <item 
          android:id="@+id/ui_message_export"
          android:title="@string/ui_menu_logexport"
          android:icon="@drawable/ic_action_export"
          osmonitor:showAsAction="ifRoom"  />
     
      <item 
            android:id="@+id/ui_menu_setting" 
            android:title="@string/ui_menu_setting" 
            android:icon="@drawable/ic_action_option" 
            osmonitor:showAsAction="ifRoom" />  

     <item android:id="@+id/ui_menu_exit" 
          android:title="@string/ui_menu_exit" 
          android:icon="@drawable/ic_action_exit" 
          osmonitor:showAsAction="ifRoom" />  
     
</menu>

