<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" 
               xmlns:osmonitor="http://schemas.android.com/apk/res-auto">
    
    <group android:id="@+id/ui_process_menu_group">
        <item 
            android:id="@+id/ui_menu_help" 
            android:title="@string/ui_menu_help" 
            android:icon="@drawable/ic_action_help" 
            osmonitor:showAsAction="ifRoom" />
        
        <item android:id="@+id/ui_menu_setting" 
            android:title="@string/ui_menu_setting" 
            android:icon="@drawable/ic_action_option" 
            osmonitor:showAsAction="ifRoom" />
        
        <item android:id="@+id/ui_menu_tools" 
            android:title="@string/ui_menu_tools" 
            android:icon="@drawable/ic_action_tools" 
            osmonitor:showAsAction="ifRoom|collapseActionView" 
            osmonitor:actionLayout="@layout/ui_process_action" />
    </group>
    
    <item android:id="@+id/ui_menu_exit" 
            android:title="@string/ui_menu_exit" 
            android:icon="@drawable/ic_action_exit" 
            osmonitor:showAsAction="ifRoom" />  
</menu>