<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" 
               xmlns:osmonitor="http://schemas.android.com/apk/res-auto">
    
    <group android:id="@+id/ui_connection_menu_group">
        
        <item android:id="@+id/ui_menu_setting" 
            android:title="@string/ui_menu_setting" 
            android:icon="@drawable/ic_action_option" 
            osmonitor:showAsAction="ifRoom" />  
        
        <item android:id="@+id/ui_menu_stop" 
            android:title="@string/ui_menu_stop" 
            android:icon="@drawable/ic_action_stop" 
            osmonitor:showAsAction="ifRoom" />
            
       <item android:id="@+id/ui_menu_exit" 
            android:title="@string/ui_menu_exit" 
            android:icon="@drawable/ic_action_exit" 
            osmonitor:showAsAction="ifRoom" />   
        
    </group>
    
</menu>